# mintry-fabric

./: .env.example  .gitignore  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE_1_FILE_MANIFEST.md  PHASE_1_IMPLEMENTATION.md  PHASE_1_QUICK_START.md  PHASE_1_READY.md  PHASE_1_SUMMARY.md  QUICK_START_TESTING.md  README.md  SECURITY.md  SUPABASE_SETUP.md  docker-compose.yml  kill_switch_demo.py  marketing_demo.py  phase1_demo.py  pyproject.toml  setup-supabase-integration.py  setup-supabase-integration.sh  simulate_spend.py  smoke_test.py  smoke_test2.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTROL_PLANE_SPEC.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  README.md  RELEASE_BASELINE.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  RUN_LOCAL.md  SPRINT_PLAN.md  TROUBLESHOOTING.md
scripts/: seed_demo_environment.py  setup-supabase.sh  start-dashboard-runtime.sh  tune-kernel.sh
test_data/: dashboard_test.db  dashboard_test.db-shm  dashboard_test.db-wal  demo.db  demo_phase1.db  demo_phase1.db-shm  demo_phase1.db-wal  local.db  local.db-shm  local.db-wal
tests/: test_allocated_budget_usage.py  test_audit_log_cli.py  test_control_plane.py  test_crypto.py  test_dynamic_mandate.py  test_intent_fabric.py  test_metering.py  test_mintry_fabric.py  test_mpp_bridge.py  test_observability.py  test_opa.py  test_policy_sync.py  test_sprint3.py  test_telemetry.py  test_telemetry_batch.py  test_three_lines_ergonomics.py
(+69 files in other folders)
