[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mintry-fabric"
version = "1.0.0"
description = "Universal Logic Fabric for the Agentic Economy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "pydantic",
    "cryptography",
    "sqlite-utils",
    "openai",
]

[project.scripts]
mintry = "mintry.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.36.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mintry"]

[tool.uv]
managed = true
package = true
