[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mintry-fabric"
version = "1.0.0"
description = "Universal Logic Fabric for the Agentic Economy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "pydantic",
    "cryptography",
    "sqlite-utils",
    "openai",
    # Observability (activated when MINTRY_OTEL_ENABLED=1)
    "opentelemetry-api",
    "opentelemetry-sdk",
    "prometheus_client",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mintry = "mintry.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.36.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mintry"]

[tool.uv]
managed = true
package = true
